upload progress indicator plugin implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <h4>Busy Indicator</h4>
-<button (click)="show()">Show</button>
+<button (click)="show()">Show Busy</button>
+
+<h4>Upload Progress Indicator</h4>
+<button (click)="upload()">Show Upload</button>
