--- a/projects/upload-progress-indicator/src/lib/upload-progress-indicator.component.css
+++ b/projects/upload-progress-indicator/src/lib/upload-progress-indicator.component.css
@@ -69,14 +69,6 @@
     background-color: white;
 }
 
-.icon {
-    margin-top: 0px;
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    background-size: cover;
-  }
-  
-  .icon-upload {
-    background-image: url(./upload.svg);
-  }
+#upload-icon {
+    font-size: 3em;
+}
